plugins {
    id "io.spring.dependency-management" version "1.1.7"
}

version '1.0-SNAPSHOT'

allprojects {
    group 'ru.mishapp'

    repositories {
        mavenLocal()
        mavenCentral()
    }

    apply plugin: "io.spring.dependency-management"
    apply plugin: 'java'
    dependencyManagement {
        dependencies {
            imports {
                mavenBom "org.springframework.boot:spring-boot-dependencies:${springBoot}"
            }
        }
    }

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(26)
        }
    }
}